setup: bun init

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,17 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "Digital Kicker Backend",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Marvin Voss, Maximilian Koenig",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/bun": "latest"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
+  }
 }
