--- a/frontend/dig-kick-fe/package.json
+++ b/frontend/dig-kick-fe/package.json
@@ -49,6 +49,7 @@
     "@typescript-eslint/eslint-plugin": "^7.3.0",
     "@typescript-eslint/parser": "^7.3.0",
     "autoprefixer": "^10.4.0",
+    "daisyui": "^4.10.2",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-playwright": "^0.15.3",
