--- a/backend/package.json
+++ b/backend/package.json
@@ -18,22 +18,11 @@
   "generator": {
     "renderer": "react",
     "apiVersion": "v3",
-    "supportedProtocols": [
-      "mqtt"
-    ],
     "parameters": {
-    },
-    "conditionalFiles": {
-    },
-    "nonRenderableFiles": [
-
-    ],
-    "generator": "<2.0.0",
-    "filters": [
-      "@asyncapi/generator-filters"
-    ],
-    "hooks": {
-      "@asyncapi/generator-hooks": "hookFunctionName"
+      "server": {
+        "description": "The server you want to use in the code.",
+        "required": true
+      }
     }
   }
 }
