--- a/backend/asyncapi.yaml
+++ b/backend/asyncapi.yaml
@@ -62,6 +62,8 @@ components:
       properties:
         ledCount:
           type: integer
+          minItems: 0
+          maxItems: 20
           example: 2
           description: Describes how many LEDs are getting turned on.
         colors:
