--- a/backend/asyncapi.yaml
+++ b/backend/asyncapi.yaml
@@ -53,14 +53,16 @@ components:
                   1,
                   2
                 ],
-                "text": "WHITE 1 : 2 BLACK"
+                "text": "WHITE 1 : 2 BLACK",
+                "inverted": false
               },
               {
                 "cursorPosition": [
                   1,
                   3
                 ],
-                "text": "LAST SCORED: TEAM WHITE"
+                "text": "LAST SCORED: TEAM WHITE",
+                "inverted": true
               }
             ]
           }
@@ -78,6 +80,10 @@ components:
                   type: string
                   description: Defines the text.
                   example: "WHITE 1 : 2 BLACK"
+                inverted:
+                  type: boolean
+                  description: Defines if the display should be inverted around the text.
+                  example: false
             
     
     ledStatus:
