--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Digital Kicker Backend",
   "main": "index.ts",
   "scripts": {
-    "run:dev": "bun run index.ts",
+    "start:dev": "bun run index.ts",
     "gen:doc:md": "asyncapi generate fromTemplate asyncapi.yaml @asyncapi/markdown-template -o ./docs ",
     "test": "bun test"
   },
