--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,9 @@
   },
   "dependencies": {
     "mqtt": "^5.5.3",
+    "reflect-metadata": "^0.2.2",
+    "sqlite3": "^5.1.7",
+    "typeorm": "0.3.16",
     "winston": "^3.13.0"
   }
 }
