--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -174,8 +174,12 @@ dist
 # Finder (MacOS) folder config
 .DS_Store
 
+# module lock
 package-lock.json
-
 bun.lockb
 
+# env files
 **/*.env
+
+# Database
+**/*.db
