--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,9 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "Digital Kicker Backend",
-  "main": "index.ts",
+  "main": "src/app.ts",
   "scripts": {
-    "start:dev": "bun run index.ts",
+    "start:dev": "bun run src/app.ts",
     "gen:doc:md": "asyncapi generate fromTemplate asyncapi.yaml @asyncapi/markdown-template -o ./docs ",
     "test": "bun test"
   },
